@@ -1,4 +1,4 @@
-/**
+/*
  * Licensed to the Apache Software Foundation (ASF) under one
  * or more contributor license agreements.  See the NOTICE file
  * distributed with this work for additional information
@@ -35,7 +35,6 @@ import java.io.PrintStream;
 import java.io.SequenceInputStream;
 import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Method;
-import java.lang.reflect.Modifier;
 import java.net.JarURLConnection;
 import java.net.URL;
 import java.net.URLConnection;
@@ -52,8 +51,8 @@ import java.sql.SQLWarning;
 import java.sql.Statement;
 import java.text.ChoiceFormat;
 import java.text.MessageFormat;
-import java.util.Arrays;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.Date;
@@ -61,12 +60,15 @@ import java.util.Enumeration;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.Iterator;
+import java.util.LinkedHashMap;
 import java.util.LinkedList;
 import java.util.List;
 import java.util.ListIterator;
 import java.util.Map;
+import java.util.Map.Entry;
 import java.util.Properties;
 import java.util.ResourceBundle;
+import java.util.ServiceLoader;
 import java.util.Set;
 import java.util.SortedSet;
 import java.util.StringTokenizer;
@@ -74,14 +76,6 @@ import java.util.TreeMap;
 import java.util.TreeSet;
 import java.util.jar.Attributes;
 import java.util.jar.Manifest;
-import java.util.zip.ZipEntry;
-import java.util.zip.ZipFile;
-
-import jline.console.completer.Completer;
-import jline.console.completer.StringsCompleter;
-import jline.console.completer.FileNameCompleter;
-import jline.console.ConsoleReader;
-import jline.console.history.FileHistory;
 
 import org.apache.commons.cli.CommandLine;
 import org.apache.commons.cli.GnuParser;
@@ -93,18 +87,27 @@ import org.apache.hadoop.fs.FileSystem;
 import org.apache.hadoop.hive.conf.HiveConf;
 import org.apache.hadoop.io.IOUtils;
 import org.apache.hive.beeline.cli.CliOptionsProcessor;
-import org.apache.hive.common.util.ShutdownHookManager;
-import org.apache.hive.beeline.hs2connection.BeelineHS2ConnectionFileParseException;
-import org.apache.hive.beeline.hs2connection.HS2ConnectionFileUtils;
-import org.apache.hive.beeline.hs2connection.UserHS2ConnectionFileParser;
+import org.apache.hive.beeline.hs2connection.BeelineConfFileParseException;
+import org.apache.hive.beeline.hs2connection.BeelineSiteParseException;
+import org.apache.hive.beeline.hs2connection.BeelineSiteParser;
 import org.apache.hive.beeline.hs2connection.HS2ConnectionFileParser;
+import org.apache.hive.beeline.hs2connection.HS2ConnectionFileUtils;
 import org.apache.hive.beeline.hs2connection.HiveSiteHS2ConnectionFileParser;
+import org.apache.hive.beeline.hs2connection.UserHS2ConnectionFileParser;
+import org.apache.hive.common.util.ShutdownHookManager;
+import org.apache.hive.jdbc.HiveConnection;
+import org.apache.hive.jdbc.JdbcUriParseException;
+import org.apache.hive.jdbc.Utils;
+import org.apache.hive.jdbc.Utils.JdbcConnectionParams;
 import org.apache.thrift.transport.TTransportException;
 
 import com.google.common.annotations.VisibleForTesting;
 
-import org.apache.hive.jdbc.Utils;
-import org.apache.hive.jdbc.Utils.JdbcConnectionParams;
+import jline.console.ConsoleReader;
+import jline.console.completer.Completer;
+import jline.console.completer.FileNameCompleter;
+import jline.console.completer.StringsCompleter;
+import jline.console.history.FileHistory;
 
 /**
  * A console SQL shell with command completion.
@@ -171,7 +174,7 @@ public class BeeLine implements Closeable {
   private static final String HIVE_VAR_PREFIX = "--hivevar";
   private static final String HIVE_CONF_PREFIX = "--hiveconf";
   private static final String PROP_FILE_PREFIX = "--property-file";
-  static final String PASSWD_MASK = "[passwd stripped]";
+  public static final String PASSWD_MASK = "[passwd stripped]";
 
   private final Map<Object, Object> formats = map(new Object[] {
       "vertical", new VerticalOutputFormat(this),
@@ -308,15 +311,23 @@ public class BeeLine implements Closeable {
     options.addOption(OptionBuilder
         .hasArg()
         .withArgName("driver class")
-        .withDescription("the driver class to use")
+        .withDescription("The driver class to use")
         .create('d'));
 
     // -u <database url>
     options.addOption(OptionBuilder
         .hasArg()
         .withArgName("database url")
-        .withDescription("the JDBC URL to connect to")
+        .withDescription("The JDBC URL to connect to")
         .create('u'));
+
+    // -c <named url in the beeline-hs2-connection.xml>
+    options.addOption(OptionBuilder
+        .hasArg()
+        .withArgName("named JDBC URL in beeline-site.xml")
+        .withDescription("The named JDBC URL to connect to, which should be present in "
+            + "beeline-site.xml as the value of beeline.hs2.jdbc.url.<namedUrl>")
+        .create('c'));
 
     // -r
     options.addOption(OptionBuilder
@@ -328,14 +339,14 @@ public class BeeLine implements Closeable {
     options.addOption(OptionBuilder
         .hasArg()
         .withArgName("username")
-        .withDescription("the username to connect as")
+        .withDescription("The username to connect as")
         .create('n'));
 
     // -p <password>
     options.addOption(OptionBuilder
         .hasArg()
         .withArgName("password")
-        .withDescription("the password to connect as")
+        .withDescription("The password to connect as")
         .hasOptionalArg()
         .create('p'));
 
@@ -343,7 +354,7 @@ public class BeeLine implements Closeable {
     options.addOption(OptionBuilder
         .hasArg()
         .withArgName("password-file")
-        .withDescription("the password file to read password from")
+        .withDescription("The password file to read password from")
         .withLongOpt("password-file")
         .create('w'));
 
@@ -351,35 +362,41 @@ public class BeeLine implements Closeable {
     options.addOption(OptionBuilder
         .hasArg()
         .withArgName("authType")
-        .withDescription("the authentication type")
+        .withDescription("The authentication type")
         .create('a'));
 
     // -i <init file>
     options.addOption(OptionBuilder
-        .hasArg()
+        .hasArgs()
         .withArgName("init")
-        .withDescription("script file for initialization")
+        .withDescription("The script file for initialization")
         .create('i'));
 
     // -e <query>
     options.addOption(OptionBuilder
         .hasArgs()
         .withArgName("query")
-        .withDescription("query that should be executed")
+        .withDescription("The query that should be executed")
         .create('e'));
 
     // -f <script file>
     options.addOption(OptionBuilder
         .hasArg()
         .withArgName("file")
-        .withDescription("script file that should be executed")
+        .withDescription("The script file that should be executed")
         .create('f'));
 
     // -help
     options.addOption(OptionBuilder
         .withLongOpt("help")
-        .withDescription("display this message")
+        .withDescription("Display this message")
         .create('h'));
+    
+    // -getUrlsFromBeelineSite
+    options.addOption(OptionBuilder
+        .withLongOpt("getUrlsFromBeelineSite")
+        .withDescription("Print all urls from beeline-site.xml, if it is present in the classpath")
+        .create());
 
     // Substitution option --hivevar
     options.addOption(OptionBuilder
@@ -387,7 +404,7 @@ public class BeeLine implements Closeable {
         .hasArgs(2)
         .withArgName("key=value")
         .withLongOpt("hivevar")
-        .withDescription("hive variable name and value")
+        .withDescription("Hive variable name and value")
         .create());
 
     //hive conf option --hiveconf
@@ -403,7 +420,7 @@ public class BeeLine implements Closeable {
     options.addOption(OptionBuilder
         .hasArg()
         .withLongOpt("property-file")
-        .withDescription("the file to read configuration properties from")
+        .withDescription("The file to read configuration properties from")
         .create());
   }
 
@@ -469,7 +486,7 @@ public class BeeLine implements Closeable {
     try {
       return MessageFormat.format(
           new ChoiceFormat(resourceBundle.getString(res)).format(param),
-          new Object[] {new Integer(param)});
+          new Object[] {Integer.valueOf(param)});
     } catch (Exception e) {
       return res + ": " + param;
     }
@@ -498,7 +515,7 @@ public class BeeLine implements Closeable {
 
   protected String locElapsedTime(long milliseconds) {
     if (getOpts().getShowElapsedTime()) {
-      return loc("time-ms", new Object[] {new Double(milliseconds / 1000d)});
+      return loc("time-ms", new Object[] {Double.valueOf(milliseconds / 1000d)});
     }
     return "";
   }
@@ -703,7 +720,7 @@ public class BeeLine implements Closeable {
 
     private boolean isBeeLineOpt(String arg) {
       return arg.startsWith("--") && !(HIVE_VAR_PREFIX.equals(arg) || (HIVE_CONF_PREFIX.equals(arg))
-          || "--help".equals(arg) || PROP_FILE_PREFIX.equals(arg));
+          || "--help".equals(arg) || PROP_FILE_PREFIX.equals(arg) || "--getUrlsFromBeelineSite".equals(arg));
     }
   }
 
@@ -740,7 +757,7 @@ public class BeeLine implements Closeable {
 
     dbName = commandLine.getOptionValue("database");
     getOpts().setVerbose(Boolean.parseBoolean(commandLine.getOptionValue("verbose")));
-    getOpts().setSilent(Boolean.parseBoolean(commandLine.getOptionValue("slient")));
+    getOpts().setSilent(Boolean.parseBoolean(commandLine.getOptionValue("silent")));
 
     int code = 0;
     if (commandLine.getOptionValues("e") != null) {
@@ -788,12 +805,17 @@ public class BeeLine implements Closeable {
     // and uses it to connect if found
     // no-op if the file is not present
     if(!connSuccessful && !exit) {
-      connSuccessful = defaultBeelineConnect();
+      connSuccessful = defaultBeelineConnect(cl);
+    }
+    if (exit) {
+      return 1;
     }
 
     int code = 0;
     if (cl.getOptionValues('e') != null) {
       commands = Arrays.asList(cl.getOptionValues('e'));
+      opts.setAllowMultiLineCommand(false); //When using -e, command is always a single line
+
     }
 
     if (!commands.isEmpty() && getOpts().getScriptFile() != null) {
@@ -832,6 +854,12 @@ public class BeeLine implements Closeable {
       getOpts().setHelpAsked(true);
       return true;
     }
+    
+    if (cl.hasOption("getUrlsFromBeelineSite")) {
+      printBeelineSiteUrls();
+      getOpts().setBeelineSiteUrlsAsked(true);
+      return true;
+    }
 
     Properties hiveVars = cl.getOptionProperties("hivevar");
     for (String key : hiveVars.stringPropertyNames()) {
@@ -864,6 +892,18 @@ public class BeeLine implements Closeable {
 
 
     if (url != null) {
+      // Specifying username/password/driver explicitly will override the values from the url;
+      // make sure we don't override the values present in the url with empty values.
+      if (user == null) {
+        user = Utils.parsePropertyFromUrl(url, JdbcConnectionParams.AUTH_USER);
+      }
+      if (pass == null) {
+        pass = Utils.parsePropertyFromUrl(url, JdbcConnectionParams.AUTH_PASSWD);
+      }
+      if (driver == null) {
+        driver = Utils.parsePropertyFromUrl(url, JdbcConnectionParams.PROPERTY_DRIVER);
+      }
+
       String com;
       String comForDebug;
       if(pass != null) {
@@ -874,7 +914,11 @@ public class BeeLine implements Closeable {
         comForDebug = constructCmdUrl(url, user, driver, true);
       }
       debug(comForDebug);
-      return dispatch(com);
+      if (!dispatch(com)) {
+        exit = true;
+        return false;
+      }
+      return true;
     }
     // load property file
     String propertyFile = cl.getOptionValue("property-file");
@@ -888,6 +932,44 @@ public class BeeLine implements Closeable {
         exit = true;
         return false;
       }
+    }
+    return false;
+  }
+
+  private void printBeelineSiteUrls() {
+    BeelineSiteParser beelineSiteParser = getUserBeelineSiteParser();
+    if (!beelineSiteParser.configExists()) {
+      output("No beeline-site.xml in the path", true);
+    }
+    if (beelineSiteParser.configExists()) {
+      // Get the named url from user specific config file if present
+      try {
+        Properties userNamedConnectionURLs = beelineSiteParser.getConnectionProperties();
+        userNamedConnectionURLs.remove(BeelineSiteParser.DEFAULT_NAMED_JDBC_URL_PROPERTY_KEY);
+        StringBuilder sb = new StringBuilder("urls: ");
+        for (Entry<Object, Object> entry : userNamedConnectionURLs.entrySet()) {
+          String urlFromBeelineSite = (String) entry.getValue();
+          if (isZkBasedUrl(urlFromBeelineSite)) {
+            List<String> jdbcUrls = HiveConnection.getAllUrlStrings(urlFromBeelineSite);
+            for (String jdbcUrl : jdbcUrls) {
+              sb.append(jdbcUrl + ", ");
+            }
+          } else {
+            sb.append(urlFromBeelineSite + ", ");
+          }
+        }
+        output(sb.toString(), true);
+      } catch (Exception e) {
+        output(e.getMessage(), true);
+        return;
+      }
+    }
+  }
+  
+  private boolean isZkBasedUrl(String urlFromBeelineSite) {
+    String zkJdbcUriParam = ("serviceDiscoveryMode=zooKeeper").toLowerCase();
+    if (urlFromBeelineSite.toLowerCase().contains(zkJdbcUriParam)) {
+      return true;
     }
     return false;
   }
@@ -990,17 +1072,21 @@ public class BeeLine implements Closeable {
   public void updateOptsForCli() {
     getOpts().updateBeeLineOptsFromConf();
     getOpts().setShowHeader(false);
+    getOpts().setEscapeCRLF(false);
     getOpts().setOutputFormat("dsv");
     getOpts().setDelimiterForDSV(' ');
     getOpts().setNullEmptyString(true);
   }
 
+  public int begin(String[] args, InputStream inputStream) throws IOException {
+    return begin(args, inputStream, true);
+  }
   /**
    * Start accepting input from stdin, and dispatch it
    * to the appropriate {@link CommandHandler} until the
    * global variable <code>exit</code> is true.
    */
-  public int begin(String[] args, InputStream inputStream) throws IOException {
+  public int begin(String[] args, InputStream inputStream, boolean keepHistory) throws IOException {
     try {
       // load the options first, so we can override on the command line
       getOpts().load();
@@ -1008,7 +1094,9 @@ public class BeeLine implements Closeable {
       // nothing
     }
 
-    setupHistory();
+    if (keepHistory) {
+      setupHistory();
+    }
 
     //add shutdown hook to cleanup the beeline for smooth exit
     addBeelineShutdownHook();
@@ -1032,6 +1120,9 @@ public class BeeLine implements Closeable {
     if (getOpts().isHelpAsked()) {
       return 0;
     }
+    if (getOpts().isBeelineSiteUrlsAsked()) {
+      return 0;
+    }
     if (getOpts().getScriptFile() != null) {
       return executeFile(getOpts().getScriptFile());
     }
@@ -1048,50 +1139,110 @@ public class BeeLine implements Closeable {
    * if there connection is not made return false
    *
    */
-  private boolean defaultBeelineConnect() {
+  private boolean defaultBeelineConnect(CommandLine cl) {
     String url;
     try {
-      url = getDefaultConnectionUrl();
+      url = getDefaultConnectionUrl(cl);
       if (url == null) {
         debug("Default hs2 connection config file not found");
         return false;
       }
-    } catch (BeelineHS2ConnectionFileParseException e) {
+    } catch (BeelineConfFileParseException e) {
       error(e);
       return false;
     }
     return dispatch("!connect " + url);
   }
 
+  private String getDefaultConnectionUrl(CommandLine cl) throws BeelineConfFileParseException {
+    Properties mergedConnectionProperties = new Properties();
+    JdbcConnectionParams jdbcConnectionParams = null;
+    BeelineSiteParser beelineSiteParser = getUserBeelineSiteParser();
+    UserHS2ConnectionFileParser userHS2ConnFileParser = getUserHS2ConnFileParser();
+    Properties userConnectionProperties = new Properties();
 
-  private String getDefaultConnectionUrl() throws BeelineHS2ConnectionFileParseException {
-    HS2ConnectionFileParser userHS2ConnFileParser = getUserHS2ConnFileParser();
-    if (!userHS2ConnFileParser.configExists()) {
+    if (!userHS2ConnFileParser.configExists() && !beelineSiteParser.configExists()) {
       // nothing to do if there is no user HS2 connection configuration file
+      // or beeline-site.xml in the path
       return null;
     }
-    // get the connection properties from user specific config file
-    Properties userConnectionProperties = userHS2ConnFileParser.getConnectionProperties();
+
+    if (beelineSiteParser.configExists()) {
+      String urlFromCommandLineOption = cl.getOptionValue("u");
+      if (urlFromCommandLineOption != null) {
+        throw new BeelineSiteParseException(
+            "Not using beeline-site.xml since the user provided the url: " + urlFromCommandLineOption);
+      }
+      // Get the named url from user specific config file if present
+      Properties userNamedConnectionURLs = beelineSiteParser.getConnectionProperties();
+      if (!userNamedConnectionURLs.isEmpty()) {
+        String urlName = cl.getOptionValue("c");
+        String jdbcURL = HS2ConnectionFileUtils.getNamedUrl(userNamedConnectionURLs, urlName);
+        if (jdbcURL != null) {
+          try {
+            jdbcConnectionParams = Utils.extractURLComponents(jdbcURL, new Properties());
+          } catch (JdbcUriParseException e) {
+            throw new BeelineSiteParseException(
+                "Error in parsing jdbc url: " + jdbcURL + " from beeline-site.xml", e);
+          }
+        }
+      }
+    }
+
+    if (userHS2ConnFileParser.configExists()) {
+      // get the connection properties from user specific config file
+      userConnectionProperties = userHS2ConnFileParser.getConnectionProperties();
+    }
+
+    if (jdbcConnectionParams != null) {
+      String userName = cl.getOptionValue("n");
+      if (userName != null) {
+        jdbcConnectionParams.getSessionVars().put(JdbcConnectionParams.AUTH_USER, userName);
+      }
+      String password = cl.getOptionValue("p");
+      if (password != null) {
+        jdbcConnectionParams.getSessionVars().put(JdbcConnectionParams.AUTH_PASSWD, password);
+      }
+      String auth = cl.getOptionValue("a");
+      if (auth != null) {
+        jdbcConnectionParams.getSessionVars().put(JdbcConnectionParams.AUTH_TYPE, auth);
+      }
+      mergedConnectionProperties =
+          HS2ConnectionFileUtils.mergeUserConnectionPropertiesAndBeelineSite(
+              userConnectionProperties, jdbcConnectionParams);
+    } else {
+      mergedConnectionProperties = userConnectionProperties;
+    }
+
     // load the HS2 connection url properties from hive-site.xml if it is present in the classpath
     HS2ConnectionFileParser hiveSiteParser = getHiveSiteHS2ConnectionFileParser();
     Properties hiveSiteConnectionProperties = hiveSiteParser.getConnectionProperties();
     // add/override properties found from hive-site with user-specific properties
-    for (String key : userConnectionProperties.stringPropertyNames()) {
+    for (String key : mergedConnectionProperties.stringPropertyNames()) {
       if (hiveSiteConnectionProperties.containsKey(key)) {
         debug("Overriding connection url property " + key
             + " from user connection configuration file");
       }
-      hiveSiteConnectionProperties.setProperty(key, userConnectionProperties.getProperty(key));
+      hiveSiteConnectionProperties.setProperty(key, mergedConnectionProperties.getProperty(key));
     }
     // return the url based on the aggregated connection properties
     return HS2ConnectionFileUtils.getUrl(hiveSiteConnectionProperties);
+  }
+
+
+  /*
+   * Increased visibility of this method is only for providing better test coverage
+   */
+  @VisibleForTesting
+  public BeelineSiteParser getUserBeelineSiteParser() {
+    return new BeelineSiteParser();
   }
 
   /*
    * Increased visibility of this method is only for providing better test coverage
    */
   @VisibleForTesting
-  public HS2ConnectionFileParser getUserHS2ConnFileParser() {
+  public UserHS2ConnectionFileParser getUserHS2ConnFileParser() {
     return new UserHS2ConnectionFileParser();
   }
 
@@ -1104,18 +1255,31 @@ public class BeeLine implements Closeable {
   }
 
   int runInit() {
-    String initFiles[] = getOpts().getInitFiles();
+    String[] initFiles = getOpts().getInitFiles();
+
+    //executionResult will be ERRNO_OK only if all initFiles execute successfully
+    int executionResult = ERRNO_OK;
+    boolean exitOnError = !getOpts().getForce();
+
     if (initFiles != null && initFiles.length != 0) {
       for (String initFile : initFiles) {
         info("Running init script " + initFile);
         try {
-          return executeFile(initFile);
+          int currentResult = executeFile(initFile);
+          if (currentResult != ERRNO_OK) {
+            executionResult = currentResult;
+
+            if (exitOnError) {
+              return executionResult;
+            }
+          }
         } finally {
-          exit = false;
+          //exit beeline if there is initScript failure and --force is not set
+          exit = exitOnError && executionResult != ERRNO_OK;
         }
       }
     }
-    return ERRNO_OK;
+    return executionResult;
   }
 
   private int embeddedConnect() {
@@ -1160,7 +1324,16 @@ public class BeeLine implements Closeable {
         }
         fileStream = fs.open(path);
       } else {
-        fileStream = new FileInputStream(fileName);
+        org.apache.hadoop.fs.Path path = new org.apache.hadoop.fs.Path(fileName);
+        FileSystem fs;
+        HiveConf conf = new HiveConf();
+        if (!path.toUri().isAbsolute()) {
+          fs = FileSystem.getLocal(conf);
+          path = fs.makeQualified(path);
+        } else {
+          fs = FileSystem.get(path.toUri(), conf);
+        }
+        fileStream = fs.open(path);
       }
       return execute(initializeConsoleReader(fileStream), !getOpts().getForce());
     } catch (Throwable t) {
@@ -1173,12 +1346,15 @@ public class BeeLine implements Closeable {
 
   private int execute(ConsoleReader reader, boolean exitOnError) {
     int lastExecutionResult = ERRNO_OK;
+    Character mask = (System.getProperty("jline.terminal", "").equals("jline.UnsupportedTerminal")) ? null
+                       : ConsoleReader.NULL_MASK;
+
     while (!exit) {
       try {
         // Execute one instruction; terminate on executing a script if there is an error
         // in silent mode, prevent the query and prompt being echoed back to terminal
         String line = (getOpts().isSilent() && getOpts().getScriptFile() != null) ? reader
-            .readLine(null, ConsoleReader.NULL_MASK) : reader.readLine(getPrompt());
+            .readLine(null, mask) : reader.readLine(getPrompt());
 
         // trim line
         if (line != null) {
@@ -1187,7 +1363,9 @@ public class BeeLine implements Closeable {
 
         if (!dispatch(line)) {
           lastExecutionResult = ERRNO_OTHER;
-          if (exitOnError) break;
+          if (exitOnError) {
+            break;
+          }
         } else if (line != null) {
           lastExecutionResult = ERRNO_OK;
         }
@@ -1236,7 +1414,11 @@ public class BeeLine implements Closeable {
 
     try {
       // now set the output for the history
-      consoleReader.setHistory(this.history);
+      if (this.history != null) {
+        consoleReader.setHistory(this.history);
+      } else {
+        consoleReader.setHistoryEnabled(false);
+      }
     } catch (Exception e) {
       handleException(e);
     }
@@ -1696,7 +1878,7 @@ public class BeeLine implements Closeable {
    */
   int getSize(ResultSet rs) {
     try {
-      if (rs.getType() == rs.TYPE_FORWARD_ONLY) {
+      if (rs.getType() == ResultSet.TYPE_FORWARD_ONLY) {
         return -1;
       }
       rs.last();
@@ -1810,7 +1992,7 @@ public class BeeLine implements Closeable {
 
 
   static Map<Object, Object> map(Object[] obs) {
-    Map<Object, Object> m = new HashMap<Object, Object>();
+    Map<Object, Object> m = new LinkedHashMap<Object, Object>();
     for (int i = 0; i < obs.length - 1; i += 2) {
       m.put(obs[i], obs[i + 1]);
     }
@@ -2007,7 +2189,7 @@ public class BeeLine implements Closeable {
         new Object[] {
             e.getMessage() == null ? "" : e.getMessage().trim(),
             e.getSQLState() == null ? "" : e.getSQLState().trim(),
-            new Integer(e.getErrorCode())}));
+            Integer.valueOf(e.getErrorCode())}));
 
     if (getOpts().getVerbose()) {
       e.printStackTrace(getErrorStream());
@@ -2111,121 +2293,20 @@ public class BeeLine implements Closeable {
     return scanDrivers(false);
   }
 
-
   Driver[] scanDrivers(boolean knownOnly) throws IOException {
     long start = System.currentTimeMillis();
 
-    Set<String> classNames = new HashSet<String>();
+    ServiceLoader<Driver> sqlDrivers = ServiceLoader.load(Driver.class);
 
-    if (!knownOnly) {
-      classNames.addAll(Arrays.asList(
-          ClassNameCompleter.getClassNames()));
-    }
+    Set<Driver> driverClasses = new HashSet<>();
 
-    classNames.addAll(KNOWN_DRIVERS);
-
-    Set driverClasses = new HashSet();
-
-    for (Iterator<String> i = classNames.iterator(); i.hasNext();) {
-      String className = i.next().toString();
-
-      if (className.toLowerCase().indexOf("driver") == -1) {
-        continue;
-      }
-
-      try {
-        Class c = Class.forName(className, false,
-            Thread.currentThread().getContextClassLoader());
-        if (!Driver.class.isAssignableFrom(c)) {
-          continue;
-        }
-
-        if (Modifier.isAbstract(c.getModifiers())) {
-          continue;
-        }
-
-        // now instantiate and initialize it
-        driverClasses.add(c.newInstance());
-      } catch (Throwable t) {
-      }
+    for (Driver driver : sqlDrivers) {
+        driverClasses.add(driver);
     }
     info("scan complete in "
         + (System.currentTimeMillis() - start) + "ms");
-    return (Driver[]) driverClasses.toArray(new Driver[0]);
+    return driverClasses.toArray(new Driver[0]);
   }
-
-
-  private Driver[] scanDriversOLD(String line) {
-    long start = System.currentTimeMillis();
-
-    Set<String> paths = new HashSet<String>();
-    Set driverClasses = new HashSet();
-
-    for (StringTokenizer tok = new StringTokenizer(
-        System.getProperty("java.ext.dirs"),
-        System.getProperty("path.separator")); tok.hasMoreTokens();) {
-      File[] files = new File(tok.nextToken()).listFiles();
-      for (int i = 0; files != null && i < files.length; i++) {
-        paths.add(files[i].getAbsolutePath());
-      }
-    }
-
-    for (StringTokenizer tok = new StringTokenizer(
-        System.getProperty("java.class.path"),
-        System.getProperty("path.separator")); tok.hasMoreTokens();) {
-      paths.add(new File(tok.nextToken()).getAbsolutePath());
-    }
-
-    for (Iterator<String> i = paths.iterator(); i.hasNext();) {
-      File f = new File(i.next());
-      output(getColorBuffer().pad(loc("scanning", f.getAbsolutePath()), 60),
-          false);
-
-      try (ZipFile zf = new ZipFile(f)) {
-        int total = zf.size();
-        int index = 0;
-
-        for (Enumeration zfEnum = zf.entries(); zfEnum.hasMoreElements();) {
-          ZipEntry entry = (ZipEntry) zfEnum.nextElement();
-          String name = entry.getName();
-          progress(index++, total);
-
-          if (name.endsWith(".class")) {
-            name = name.replace('/', '.');
-            name = name.substring(0, name.length() - 6);
-
-            try {
-              // check for the string "driver" in the class
-              // to see if we should load it. Not perfect, but
-              // it is far too slow otherwise.
-              if (name.toLowerCase().indexOf("driver") != -1) {
-                Class c = Class.forName(name, false,
-                    getClass().getClassLoader());
-                if (Driver.class.isAssignableFrom(c)
-                    && !(Modifier.isAbstract(
-                        c.getModifiers()))) {
-                  try {
-                    // load and initialize
-                    Class.forName(name);
-                  } catch (Exception e) {
-                  }
-                  driverClasses.add(c.newInstance());
-                }
-              }
-            } catch (Throwable t) {
-            }
-          }
-        }
-        progress(total, total);
-      } catch (Exception e) {
-      }
-    }
-
-    info("scan complete in "
-        + (System.currentTimeMillis() - start) + "ms");
-    return (Driver[]) driverClasses.toArray(new Driver[0]);
-  }
-
 
   // /////////////////////////////////////
   // ResultSet output formatting classes
