@@ -1,4 +1,4 @@
-/**
+/*
  * Licensed to the Apache Software Foundation (ASF) under one
  * or more contributor license agreements.  See the NOTICE file
  * distributed with this work for additional information
@@ -127,6 +127,19 @@ public class JobState {
   }
 
   /**
+   * The job type
+   */
+  public String getJobType()
+          throws IOException {
+    return getField("jobType");
+  }
+
+  public void setJobType(String jobType)
+          throws IOException {
+    setField("jobType", jobType);
+  }
+
+  /**
    * Add a jobid to the list of children of this job.
    *
    * @param jobid
@@ -220,7 +233,7 @@ public class JobState {
     throws IOException
   {
     String jsonString = getField("userArgs");
-    return (Map<String, Object>)JsonBuilder.jsonToMap(jsonString);
+    return JsonBuilder.jsonToMap(jsonString);
   }
   public void setUserArgs(Map<String, Object> userArgs)
     throws IOException
@@ -282,7 +295,7 @@ public class JobState {
       return null;
     else {
       try {
-        return new Long(s);
+        return Long.valueOf(s);
       } catch (NumberFormatException e) {
         LOG.error("templeton: bug " + name + " " + s + " : " + e);
         return null;
