@@ -1,4 +1,4 @@
-/**
+/*
  * Licensed to the Apache Software Foundation (ASF) under one
  * or more contributor license agreements.  See the NOTICE file
  * distributed with this work for additional information
@@ -20,7 +20,6 @@ package org.apache.hadoop.hive.ql.optimizer.calcite.stats;
 import java.util.List;
 
 import org.apache.calcite.rel.RelNode;
-import org.apache.calcite.rel.core.SemiJoin;
 import org.apache.calcite.rel.metadata.ReflectiveRelMetadataProvider;
 import org.apache.calcite.rel.metadata.RelMdSize;
 import org.apache.calcite.rel.metadata.RelMetadataProvider;
@@ -31,6 +30,7 @@ import org.apache.calcite.util.BuiltInMethod;
 import org.apache.calcite.util.ImmutableNullableList;
 import org.apache.hadoop.hive.ql.optimizer.calcite.RelOptHiveTable;
 import org.apache.hadoop.hive.ql.optimizer.calcite.reloperators.HiveJoin;
+import org.apache.hadoop.hive.ql.optimizer.calcite.reloperators.HiveSemiJoin;
 import org.apache.hadoop.hive.ql.optimizer.calcite.reloperators.HiveTableScan;
 import org.apache.hadoop.hive.ql.plan.ColStatistics;
 
@@ -59,8 +59,9 @@ public class HiveRelMdSize extends RelMdSize {
     // Obtain list of col stats, or use default if they are not available
     final ImmutableList.Builder<Double> list = ImmutableList.builder();
     int indxRqdCol = 0;
+    int nNoVirtualColumns = ((RelOptHiveTable) scan.getTable()).getNoOfNonVirtualCols();
     int nFields = scan.getRowType().getFieldCount();
-    for (int i = 0; i < nFields; i++) {
+    for (int i = 0; i < nNoVirtualColumns; i++) {
       if (neededcolsLst.contains(i)) {
         ColStatistics columnStatistic = columnStatistics.get(indxRqdCol);
         indxRqdCol++;
@@ -71,15 +72,22 @@ public class HiveRelMdSize extends RelMdSize {
           list.add(columnStatistic.getAvgColLen());
         }
       } else {
-        list.add(new Double(0));
+        list.add(Double.valueOf(0));
+      }
+    }
+    for (int i = nNoVirtualColumns; i < nFields; i++) {
+      if (neededcolsLst.contains(i)) {
+        RelDataTypeField field = scan.getRowType().getFieldList().get(i);
+        list.add(averageTypeValueSize(field.getType()));
+      } else {
+        list.add(Double.valueOf(0));
       }
     }
 
     return list.build();
   }
 
-  @Override
-  public List<Double> averageColumnSizes(SemiJoin rel, RelMetadataQuery mq) {
+  public List<Double> averageColumnSizes(HiveSemiJoin rel, RelMetadataQuery mq) {
     final RelNode left = rel.getLeft();
     final List<Double> lefts =
         mq.getAverageColumnSizes(left);
@@ -121,6 +129,10 @@ public class HiveRelMdSize extends RelMdSize {
   //       supports all types
   @Override
   public Double averageTypeValueSize(RelDataType type) {
+    return averageTypeSize(type);
+  }
+
+  public static Double averageTypeSize(RelDataType type) {
     switch (type.getSqlTypeName()) {
     case BOOLEAN:
     case TINYINT:
@@ -163,7 +175,7 @@ public class HiveRelMdSize extends RelMdSize {
     case ROW:
       Double average = 0.0;
       for (RelDataTypeField field : type.getFieldList()) {
-        average += averageTypeValueSize(field.getType());
+        average += averageTypeSize(field.getType());
       }
       return average;
     default:
