@@ -1,4 +1,4 @@
-/**
+/*
  * Licensed to the Apache Software Foundation (ASF) under one
  * or more contributor license agreements.  See the NOTICE file
  * distributed with this work for additional information
@@ -412,8 +412,8 @@ public class TestSearchArgumentImpl {
             .lessThan("x1", PredicateLeaf.Type.LONG, 22L)
             .lessThanEquals("y", PredicateLeaf.Type.STRING,
                 new HiveChar("hi", 10).toString())
-            .equals("z", PredicateLeaf.Type.FLOAT, new Double(0.22))
-            .equals("z1", PredicateLeaf.Type.FLOAT, new Double(0.22))
+            .equals("z", PredicateLeaf.Type.FLOAT, Double.valueOf(0.22))
+            .equals("z1", PredicateLeaf.Type.FLOAT, Double.valueOf(0.22))
             .end()
             .build();
     assertEquals("leaf-0 = (LESS_THAN x 22), " +
