@@ -1,4 +1,4 @@
-/**
+/*
  * Licensed to the Apache Software Foundation (ASF) under one
  * or more contributor license agreements.  See the NOTICE file
  * distributed with this work for additional information
@@ -21,17 +21,21 @@ import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 
-import junit.framework.TestCase;
+
 
 import org.apache.hadoop.hive.serde2.objectinspector.ObjectInspector.Category;
 import org.apache.hadoop.hive.serde2.objectinspector.primitive.PrimitiveObjectInspectorFactory;
+import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertNull;
+import org.junit.Test;
 
 /**
  * TestUnionStructObjectInspector.
  *
  */
-public class TestUnionStructObjectInspector extends TestCase {
+public class TestUnionStructObjectInspector {
 
+  @Test
   public void testUnionStructObjectInspector() throws Throwable {
     try {
       ArrayList<String> fieldNames1 = new ArrayList<String>();
@@ -100,7 +104,7 @@ public class TestUnionStructObjectInspector extends TestCase {
       struct1.add(true);
       ArrayList<Object> struct2 = new ArrayList<Object>(2);
       struct2.add(1.0);
-      struct2.add(new Long(111));
+      struct2.add(Long.valueOf(111));
       ArrayList<Object> struct = new ArrayList<Object>(2);
       struct.add(struct1);
       struct.add(struct2);
